# GSIbec

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  gsibclim-import.cmake.in  gsibec-import.cmake.in
cmake/: compiler_flags_GNU_Fortran.cmake  compiler_flags_Intel_Fortran.cmake  gsibclim_compiler_flags.cmake  gsibec_compiler_flags.cmake
src/: CMakeLists.txt
src/gsibclim/: CMakeLists.txt  CMakeLists.txt.rt  README  balmod.F90  berror.F90  bkerror.F90  bkgcov.F90  bkgvar_rewgt.f90  compact_diffs.f90  compute_qvar3d.F90  constants.f90  control2state_ad.F90  control_vectors.f90  derivsmod.f90  general_specmod.f90  general_spectral_transforms.f90  general_sub2grid_mod.f90  genqsat.F90  get.f90  getuv.F90  gridmod.F90  gsi_bundlemod.F90  gsimod.F90  guess_grids.f90  jfunc.f90  looplimits.f90  m_berror_stats.f90  m_gbc4saber.f90  m_grid2sub1var.f90  m_gsibclim.F90  m_kinds.F90  m_mpimod.F90  m_nc_GEOSens.f90  m_rf.f90  mpeu_mpif.F90  mpeu_util.F90  mpl_allreduce.F90  prewgt.F90  raflib.f90  simpin1_init.f90  (+7 more)
src/gsibclim/gsi/: CMakeLists.txt  README  abstract_ensmod.f90  balmod.F90  berror.F90  bias_predictors.F90  bkerror.F90  bkgcov.F90  bkgvar.f90  bkgvar_rewgt.f90  blendmod.f90  class_get_pseudo_ensperts.f90  compact_diffs.f90  compute_qvar3d.F90  constants.f90  control2state.F90  control2state_ad.F90  control_vectors.f90  derivsmod.f90  egrid2agrid_mod.f90  en_perts_io.f90  general_commvars_mod.f90  general_specmod.f90  general_spectral_transforms.f90  general_sub2grid_mod.f90  general_transform.f90  gengrid_vars.f90  genqsat.F90  get.f90  get_gefs_ensperts_dualres.F90  getprs.F90  getuv.F90  gridmod.F90  gsi_4dvar.f90  gsi_bundlemod.F90  gsi_chemguess_mod.F90  gsi_convert_cv_mod.f90  gsi_enscouplermod.f90  gsi_io.f90  gsi_metguess_mod.F90  (+37 more)
src/gsibclim/gsigeos/: CMakeLists.txt  cplr_ensemble.F90  geos_StateIO.F90  m_nc_GEOSens.f90
src/gsibclim/gsigfs/: CMakeLists.txt  cplr_gfs_ensmod.f90  ncepnems_io.f90
src/gsibec/: CMakeLists.txt
src/gsibec/gsi/: CMakeLists.txt  README  abstract_ensmod.f90  balmod.F90  berror.F90  bias_predictors.F90  bkerror.F90  bkgcov.F90  bkgvar.f90  bkgvar_rewgt.f90  blendmod.f90  calctends.F90  class_get_pseudo_ensperts.f90  compact_diffs.f90  compute_derived.F90  compute_qvar3d.F90  constants.f90  control2state.F90  control2state_ad.F90  control_vectors.f90  derivsmod.f90  egrid2agrid_mod.f90  en_perts_io.f90  ensctl2state.F90  ensctl2state_ad.F90  fgrid2agrid_mod.f90  general_commvars_mod.f90  general_sub2grid_mod.f90  genqsat.F90  get_derivatives.F90  get_derivatives2.F90  get_gefs_ensperts_dualres.F90  getprs.F90  getprs.f90  getvvel.f90  gridmod.F90  gsi_4dvar.f90  gsi_chemguess_mod.F90  gsi_enperts_mod.F90  gsi_enscouplermod.f90  (+40 more)
src/gsibec/gsigeos/: CMakeLists.txt  cplr_ensemble.F90  geos_StateIO.F90  gsi_fixture_GEOS.F90  m_nc_GEOSens.f90  m_read_geosens.F90
src/gsibec/gsigfs/: CMakeLists.txt  cplr_gfs_ensmod.f90  gsi_fixture_GFS.F90
test/: CMakeLists.txt
test/mains/: CMakeLists.txt  eta_echo.f90  test_bkerror_clim.F90  test_geos_getens.F90  test_gsi_bkerror.F90  write_berror_global.F90  write_berror_global.f90
test/testinput/: geos_saberror.nml  gfs_saberror.nml  gmao_saberror.nml  gsi-coeffs-geos-global-l72x72y46.nc4  ncep_saberror.nml
